Spaced Navbar fixed logo taking up too much space spaced landing text

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,14 @@ nav ul {
   width: 100%;
 }
 
+nav li {
+  max-width: 25%;
+}
+
 .nav_item {
   color: white;
   text-decoration: none;
+  padding: 20px;
 }
 
 .primary_button {
@@ -32,6 +37,7 @@ nav ul {
   text-decoration: none;
   background-color: #43B12E;
   padding: 20px;
+  margin-right: 20px;
 }
 
 .primary_button:hover {
@@ -47,6 +53,9 @@ nav ul {
 .primary_logo_white {
   width: 100%;
   height: auto;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
 
 .header {
@@ -58,12 +67,18 @@ nav ul {
 
 .landing {
   margin-left: 20px;
+  margin-right: 20px;
   height: 100%;
   width: 100%;
 }
 
 .landing h1 {
+  margin-top: 10%;
   font-size: 3rem;
   color: #FFF;
   margin-bottom: 20px;
+}
+
+.landing p {
+  margin-left: 15px;
 }
